--- a/Emergency Messenger Client/emergency_messenger_client/pubspec.yaml
+++ b/Emergency Messenger Client/emergency_messenger_client/pubspec.yaml
@@ -14,13 +14,14 @@ description: Client-Side for the Emergency Messenger
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.2.0
   path: ^1.6.4
+  audioplayers: ^0.14.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +43,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/sounds/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
